--- a/index.html
+++ b/index.html
@@ -195,13 +195,15 @@
 
         <section class="about-text">
           <p>
-            I'm Digital Marketer from Jakarta, Indonesia, working in organic and paid social media.
-            I enjoy turning complex problems into simple, beautiful and intuitive designs.
+            I'm Digital Marketer from Jakarta, Indonesia, working in organic and paid social media. I enjoy turning complex problems into simple, engaging, and intuitive designs.
           </p>
 
           <p>
-            My job is to solve you social media needs to build your awareness to conversion.
-            Moreover, I add personal touch to your product and make sure that is eye-catching and easy to use. My aim is to bring across your message and identity in the most creative way.
+            My job is to solve your social media needs and build your conversion into awareness. Moreover, I add a personal touch to your product, making it unique and placed to the right audience. I aim to bring across your message and identity in the most creative way.
+          </p>
+
+          <p>
+            Besides that, I also love creating art through Blockchain platforms such as Ethereum, Polygon, Solana, and Tezos. I handled multiple clients' projects such as 1/1 art generation, hand-drawn, and web 3 portfolios.
           </p>
         </section>
 
@@ -228,7 +230,7 @@
                 <h4 class="h4 service-item-title">Media Planning</h4>
 
                 <p class="service-item-text">
-                  The most modern and high-quality design made at a professional level.
+                  Set up the campaign and carry the best performance.
                 </p>
               </div>
 
@@ -246,7 +248,7 @@
                 <h4 class="h4 service-item-title">Creative Brief</h4>
 
                 <p class="service-item-text">
-                  High-quality development of sites at the professional level.
+                  Solving problems through creative solutions.
                 </p>
               </div>
 
@@ -262,10 +264,10 @@
 
             
               <div class="service-content-box">
-                <h4 class="h4 service-item-title">Campaign & Content Creation</h4>
+                <h4 class="h4 service-item-title">Content Creation</h4>
 
                 <p class="service-item-text">
-                  Professional development of Content Creation for iOS and Android.
+                  Professional in creating content for the right audience.
                 </p>
               </div>
 
@@ -283,7 +285,7 @@
                 <h4 class="h4 service-item-title">Performance Optimization</h4>
 
                 <p class="service-item-text">
-                  I make high-quality photos of any category at a professional level.
+                  End-to-end optimization campaign at a professional level.
                 </p>
               </div>
 
@@ -315,7 +317,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Vito is a disciplined, fast learner, creative & problem solver person. I had the pleasure of working with him as team of full stack digital marketing by Revou during 3 months. During that time Vito has a very initiative, creative and responsible personality in his work in group project and is able to provide the right solution to a problem that occurs and is very profitable in team work. These skills would make Bhadrika a great asset to any organization or company.
+                    Vito is a disciplined, fast learner, creative, and problem solver. I had the pleasure of working with him as part of a team of full-stack digital marketing by Revou for 3 months. During that time, Vito has a very initiative, creative and responsible personality in his work on a group project. He can provide the right solution to a problem that occurs and is very profitable in teamwork. These skills make Vito a great asset to any organization or company.
                   </p>
                 </div>
 
@@ -333,18 +335,14 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                    lot of experience
-                    and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                    consectetur adipiscing
-                    elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                    Vito gives the best result and convinces us that we can achieve our goals.
                   </p>
                 </div>
 
               </div>
             </li>
 
-            <li class="testimonials-item">
+            <!-- <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
 
                 <figure class="testimonials-avatar-box">
@@ -364,7 +362,7 @@
                 </div>
 
               </div>
-            </li>
+            </li> -->
 
             <li class="testimonials-item">
               <div class="content-card" data-testimonials-item>
@@ -377,7 +375,7 @@
 
                 <div class="testimonials-text" data-testimonials-text>
                   <p>
-                    Vito is a person who is able to learn something new, fast learning, and good adaptability skill. I am happy to work with Vito in a study group during the Full Stack Digital Marketing at RevoU in the period of May 2022 to August 2022. He is also actively communicating in every group meeting, both in the learning process and group discussion.
+                    Vito is a person who can learn something new fast learning and has good adaptability skills. I am happy to work with Vito in a study group during the Full Stack Digital Marketing at RevoU from May 2022 to August 2022. He is also actively communicating in every group meeting, both in the learning process and group discussion.
                   </p>
                 </div>
 
@@ -419,11 +417,7 @@
 
               <div data-modal-text>
                 <p>
-                  Richard was hired to create a corporate identity. We were very pleased with the work done. She has a
-                  lot of experience
-                  and is very concerned about the needs of client. Lorem ipsum dolor sit amet, ullamcous cididt
-                  consectetur adipiscing
-                  elit, seds do et eiusmod tempor incididunt ut laborels dolore magnarels alia.
+                  Lorem, ipsum dolor sit amet consectetur adipisicing elit. Saepe dignissimos in non quibusdam qui eligendi laboriosam dolores voluptate possimus repellendus nisi expedita iste voluptatibus, laudantium autem odio iure quis sint.
                 </p>
               </div>
 
@@ -641,6 +635,21 @@
 
             <li class="timeline-item">
 
+              <h4 class="h4 timeline-item-title">Machine Learning, Bangkit 2021</h4>
+
+              <span>Feb 2021 — Jul 2021</span>
+
+              <p class="timeline-text">
+                Bangkit is a part of the Kampus Merdeka program supported by the Ministry of Education and Culture of Republic Indonesia. Committed over four months of active participation and a month of working on a final project about sentiment analysis from Twitter to find out the urgency of a message. Learned the key concepts and applications of AI to solve a wide range of ML problems with these specializations: <br>
+• Google IT Automation with Python<br>
+• DeepLearning.AI TensorFlow Developer Professional Certificate program<br>
+• TensorFlow: Data and Deployment Specialization<br>
+              </p>
+
+            </li>
+
+            <li class="timeline-item">
+
               <h4 class="h4 timeline-item-title">Electrical Engineer, Institut Teknologi Sepuluh Nopember (ITS)</h4>
 
               <span>Aug 2017 — Oct 2021</span>
@@ -757,7 +766,7 @@
             </li>
 
             <li class="filter-item">
-              <button data-filter-btn>Paid Media</button>
+              <button data-filter-btn>Deck</button>
             </li>
 
             <li class="filter-item">
@@ -793,7 +802,7 @@
               </li>
 
               <li class="select-item">
-                <button data-select-item>Paid Media</button>
+                <button data-select-item>Deck</button>
               </li>
 
               <li class="select-item">
@@ -815,163 +824,145 @@
           <ul class="project-list">
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://mayopixel.wallofwahini.com/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-1.jpg" alt="finance" loading="lazy">
+                  <img src="./assets/images/portfolio/web_mayopixel.png" alt="wall of wahini" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Finance</h3>
+                <h3 class="project-title">wall of wahini</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">NFT Web Portfolio</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+              <a href="https://dressupmayo.wallofwahini.com/" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-2.png" alt="orizon" loading="lazy">
+                  <img src="./assets/images/portfolio/web_dressupmayo.png" alt="Dress Up Mayo" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Orizon</h3>
+                <h3 class="project-title">Dress Up Mayo</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Profile Picture Generator</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="paid media">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="deck">
+              <a href="https://docs.google.com/presentation/d/1-JFKoWHtAZKOcavgPh0O65IwYxFP8O4yiiOZugP3lgI/edit?usp=sharing" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-3.jpg" alt="fundo" loading="lazy">
+                  <img src="./assets/images/portfolio/deck_dm_portfolio.png" alt="RevoU Portfolio" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Fundo</h3>
+                <h3 class="project-title">RevoU Portfolio</h3>
 
-                <p class="project-category">Paid Media</p>
+                <p class="project-category">DM Portfolio Deck</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="content creation">
-              <a href="#">
+              <a href="https://issuu.com/aiesecsurabaya/docs/booklet_global_volunteer_surabaya_2" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-4.png" alt="brawlhalla" loading="lazy">
+                  <img src="./assets/images/portfolio/content_aiesec_bookletgv.png" alt="Global Volunteer Booklet" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Brawlhalla</h3>
+                <h3 class="project-title">Global Volunteer Booklet</h3>
 
-                <p class="project-category">Content Creation</p>
+                <p class="project-category">Digital Booklet</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="paid media">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="deck">
+              <a href="https://docs.google.com/presentation/d/1iocOxJXl8xr2kgK9Nl_NSlHElBGh2I05RcACai_icNM/edit?usp=sharing" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-5.png" alt="dsm." loading="lazy">
+                  <img src="./assets/images/portfolio/deck_kopisarikurma.png" alt="Kopi Sari Kurma" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">DSM.</h3>
+                <h3 class="project-title">Kopi Sari Kurma</h3>
 
-                <p class="project-category">Paid Media</p>
+                <p class="project-category">Media Planner Deck</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="paid media">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="deck">
+              <a href="https://docs.google.com/presentation/d/1D4y7Mc87K9pWAplbpYK52vninvl2WbAuAio9JDR8qNA/edit?usp=sharing" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-6.png" alt="metaspark" loading="lazy">
+                  <img src="./assets/images/portfolio/deck_vitamin.png" alt="Vitamin" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">MetaSpark</h3>
+                <h3 class="project-title">Vitamin</h3>
 
-                <p class="project-category">Paid Media</p>
+                <p class="project-category">Media Planner Deck</p>
 
               </a>
             </li>
 
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
+            <li class="project-item  active" data-filter-item data-category="deck">
+              <a href="https://docs.google.com/presentation/d/1NfjhR1-_ZQNh-wAJyE9ANznrr6M2pk1DYYU6CutjgLM/edit?usp=sharing" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-7.png" alt="summary" loading="lazy">
+                  <img src="./assets/images/portfolio/deck_president_election.png" alt="President Election" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Summary</h3>
+                <h3 class="project-title">President Election</h3>
 
-                <p class="project-category">Web development</p>
+                <p class="project-category">Media Planner Deck</p>
 
               </a>
             </li>
 
             <li class="project-item  active" data-filter-item data-category="content creation">
-              <a href="#">
+              <a href="https://issuu.com/vitoatmo/docs/booklet1" target="_blank">
 
                 <figure class="project-img">
                   <div class="project-item-icon-box">
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/project-8.jpg" alt="task manager" loading="lazy">
+                  <img src="./assets/images/portfolio/content_aiesec_booklet_nfs.png" alt="NFS Booklet" loading="lazy">
                 </figure>
 
-                <h3 class="project-title">Task Manager</h3>
+                <h3 class="project-title">NFS Booklet</h3>
 
-                <p class="project-category">Content Creation</p>
-
-              </a>
-            </li>
-
-            <li class="project-item  active" data-filter-item data-category="web development">
-              <a href="#">
-
-                <figure class="project-img">
-                  <div class="project-item-icon-box">
-                    <ion-icon name="eye-outline"></ion-icon>
-                  </div>
-
-                  <img src="./assets/images/project-9.png" alt="arrival" loading="lazy">
-                </figure>
-
-                <h3 class="project-title">Arrival</h3>
-
-                <p class="project-category">Web development</p>
+                <p class="project-category">Digital Booklet</p>
 
               </a>
             </li>
@@ -989,12 +980,12 @@
 
                 <h3 class="project-title">OBJKT: Good Mayo</h3>
 
-                <p class="project-category">Collection of 366 cute Samoyed Dog with any costume.</p>
+                <p class="project-category">Collection of 366 cute Samoyed</p>
 
               </a>
             </li>
 
-            <!-- <li class="project-item  active" data-filter-item data-category="nft">
+            <li class="project-item  active" data-filter-item data-category="web development">
               <a href="https://butiq.art/wahini" target="_blank">
 
                 <figure class="project-img">
@@ -1002,16 +993,34 @@
                     <ion-icon name="eye-outline"></ion-icon>
                   </div>
 
-                  <img src="./assets/images/GoodMayo.gif" alt="arrival" loading="lazy">
+                  <img src="./assets/images/portfolio/web_butiq.png" alt="Butiq" loading="lazy">
                 </figure>
 
                 <h3 class="project-title">Butiq: wahini</h3>
 
-                <p class="project-category">An individual Website for my NFTs on Tezos</p>
+                <p class="project-category">NFT Web Portfolio</p>
 
               </a>
-            </li> -->
+            </li>
 
+            <li class="project-item  active" data-filter-item data-category="web development">
+              <a href="https://mint-mayopixel.wallofwahini.com/" target="_blank">
+
+                <figure class="project-img">
+                  <div class="project-item-icon-box">
+                    <ion-icon name="eye-outline"></ion-icon>
+                  </div>
+
+                  <img src="./assets/images/portfolio/web_minting.png" alt="Mint MayoPixel" loading="lazy">
+                </figure>
+
+                <h3 class="project-title">Mint MayoPixel</h3>
+
+                <p class="project-category">Minting Website</p>
+
+              </a>
+            </li>
+            
             <!-- <li class="project-item  active" data-filter-item data-category="nft">
               <a href="https://discord.com/invite/JmKp8kuKKD" target="_blank">
 
